# Graphics-Assignment-2

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Chair.cpp  Chair.h  Color.h  Color.h.gch  Doxyfile  Fan.cpp  Fan.h  Floor.cpp  Floor.h  Objects.cpp  Objects.h  Parser.cpp  Parser.h  README.md  Room.cpp  Room.h  Shelf.cpp  Shelf.h  Table.cpp  Table.h  Teapot.cpp  Teapot.h  Toys.cpp  Toys.h  a.out  dining-room  dining-room.cpp  fv.mtl  vase_withoutuv.mtl
Objects/: Wineglass.1obj.mtl  book-blue.mtl  book-green.mtl  book-purple.mtl  book-red.mtl  book-yellow.mtl  book1.blend  book1.mtl  colored-cup1.mtl  colored-cup2.mtl  donut.mtl  donut1.mtl  monkey.mtl  plant.mtl  plate.mtl  plate1.blend  plate1.mtl  platecolor.mtl  vase.mtl
cmake/: FindGLM.cmake
html/: _camera_8h_source.html  _chair_8h_source.html  _fan_8h_source.html  _floor_8h_source.html  _objects_8h_source.html  _parser_8h_source.html  _room_8h_source.html  _shelf_8h_source.html  _table_8h_source.html  _teapot_8h_source.html  _toys_8h_source.html  annotated.html  class_camera-members.html  class_camera.html  class_camera__coll__graph.dot  class_chair-members.html  class_chair.html  class_fan-members.html  class_fan.html  class_floor-members.html  class_floor.html  class_model-members.html  class_model.html  class_objects-members.html  class_objects.html  class_objects__coll__graph.dot  class_room-members.html  class_room.html  class_shelf-members.html  class_shelf.html  class_table-members.html  class_table.html  class_teapot-members.html  class_teapot.html  class_toys-members.html  class_toys.html  (+16 more)
(+55 files in other folders)
